// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Home Categories Selector Desktop 1`] = `
<div
  className="MuiTabs-root"
>
  <div
    className="MuiTabs-scroller MuiTabs-fixed"
    onScroll={[Function]}
    style={
      Object {
        "marginBottom": null,
        "overflow": "hidden",
      }
    }
  >
    <div
      aria-label="simple tabs example"
      className="MuiTabs-flexContainer"
      onKeyDown={[Function]}
      role="tablist"
    >
      <button
        aria-controls="simple-tabpanel-0"
        aria-selected={true}
        className="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected"
        disabled={false}
        id="simple-tab-0"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="tab"
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiTab-wrapper"
        />
        <span
          className="PrivateTabIndicator-root-17 PrivateTabIndicator-colorSecondary-19 MuiTabs-indicator"
          style={Object {}}
        />
      </button>
      <button
        aria-controls="simple-tabpanel-1"
        aria-selected={false}
        className="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit"
        disabled={false}
        id="simple-tab-1"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="tab"
        tabIndex={-1}
        type="button"
      >
        <span
          className="MuiTab-wrapper"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Home Categories Selector Mobile 1`] = `
<div
  className="MuiInputBase-root MuiInput-root MuiInput-underline"
  onClick={[Function]}
>
  <div
    aria-haspopup="listbox"
    className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "&#8203;",
        }
      }
    />
  </div>
  <input
    aria-hidden={true}
    className="MuiSelect-nativeInput"
    onAnimationStart={[Function]}
    onChange={[Function]}
    tabIndex={-1}
    value={0}
  />
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSelect-icon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M7 10l5 5 5-5z"
    />
  </svg>
</div>
`;

exports[`Storyshots Language Switcher English 1`] = `
<div
  style={
    Object {
      "backgroundColor": "white",
      "height": 50,
      "width": 150,
    }
  }
>
  <div
    className="MuiBox-root MuiBox-root-4 makeStyles-box-1"
  >
    <button
      className="makeStyles-inactive-2"
      onClick={[Function]}
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
      >
        PT
      </p>
    </button>
    <button
      className="makeStyles-active-3"
      onClick={[Function]}
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
      >
        EN
      </p>
    </button>
  </div>
</div>
`;

exports[`Storyshots Language Switcher English Dark 1`] = `
<div
  style={
    Object {
      "backgroundColor": "black",
      "height": 50,
      "width": 150,
    }
  }
>
  <div
    className="MuiBox-root MuiBox-root-12 makeStyles-box-9"
  >
    <button
      className="makeStyles-inactive-10"
      onClick={[Function]}
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
      >
        PT
      </p>
    </button>
    <button
      className="makeStyles-active-11"
      onClick={[Function]}
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
      >
        EN
      </p>
    </button>
  </div>
</div>
`;

exports[`Storyshots Language Switcher Portuguese 1`] = `
<div
  style={
    Object {
      "backgroundColor": "white",
      "height": 50,
      "width": 150,
    }
  }
>
  <div
    className="MuiBox-root MuiBox-root-8 makeStyles-box-5"
  >
    <button
      className="makeStyles-active-7"
      onClick={[Function]}
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
      >
        PT
      </p>
    </button>
    <button
      className="makeStyles-inactive-6"
      onClick={[Function]}
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
      >
        EN
      </p>
    </button>
  </div>
</div>
`;

exports[`Storyshots Language Switcher Portuguese Dark 1`] = `
<div
  style={
    Object {
      "backgroundColor": "black",
      "height": 50,
      "width": 150,
    }
  }
>
  <div
    className="MuiBox-root MuiBox-root-16 makeStyles-box-13"
  >
    <button
      className="makeStyles-active-15"
      onClick={[Function]}
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
      >
        PT
      </p>
    </button>
    <button
      className="makeStyles-inactive-14"
      onClick={[Function]}
    >
      <p
        className="MuiTypography-root MuiTypography-body1"
      >
        EN
      </p>
    </button>
  </div>
</div>
`;
